# rustls-spiffe

./: .gitignore  Cargo.toml  Makefile  README.md  README.tpl  sonar-project.properties
.github/workflows/: test.yml
spire/: Makefile
spire/conf/: agent.conf  server.conf
src/: client_stream.rs  lib.rs  server_stream.rs  svid_extractor.rs  trust_domain_store.rs
tests/: integration_test.rs
